--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,9 @@ body {
   background-color: #202020;
   color: #fff;
 }
+
+.container3D {
+  height: 100vh;
+  width: 100%;
+  background-color: #303030;
+}
