--- a/src/index.css
+++ b/src/index.css
@@ -12,5 +12,7 @@ body {
 .container3D {
   height: 100vh;
   width: 100%;
-  background-color: #303030;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
